[package]
name = "random-walk-rs"
version = "0.1.0"
authors = ["Marek Fajkus <marek.faj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "random_walk"
path = "src/lib.rs"

[[bin]]
name = "random-walk-dungeon"
path = "src/main.rs"

[dependencies]
rand = "0.7.3"
clap = "2.33.0"