cargo-features = ["edition2021"]

[package]
name = "random-walk-rs"
version = "0.1.0"
authors = ["Marek Fajkus <marek.faj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "random_walk"
path = "src/lib.rs"

[[bin]]
name = "random-walk-dungeon"
path = "src/main.rs"

[dependencies]
rand = "0.8.4"
clap = "2.34.0"